bundled_metadata/force-app/main/default/objects/Contract/fields/AgreementName__c.field-meta.xml
<CustomField>
    <fullName>AgreementName__c</fullName>
    <formula>IF( HasEquipmentAmendments__c  =  TRUE  || HasInvestmentAmmendments__c  = TRUE ||  HasRebateAmmendments__c  = TRUE , &quot;Contract Amendment&quot; &amp; &quot; &quot;  &amp; ContractNumber &amp; &quot;-&quot; &amp;  Account.Name, &quot;Contract&quot; &amp; &quot; &quot; &amp; ContractNumber &amp; &quot;-&quot; &amp;  Account.Name &amp; &quot;_&quot; &amp; TEXT(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AgreementName</label>
    <type>Text</type>
</CustomField>