bundled_metadata/force-app/main/default/objects/Contract/fields/Category_Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Category_Exclusivity__c</fullName>
    <label>Category Exclusivity</label>
    <length>500</length>
    <type>Html</type>
</CustomField>