bundled_metadata/force-app/main/default/objects/Contract/fields/Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value__c</fullName>
    <label>Contract Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>