bundled_metadata/force-app/main/default/objects/Contract/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 Year</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 Years</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 Years</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 Years</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 Years</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>