bundled_metadata/force-app/main/default/objects/Contract/fields/HasEquipmentAmendments__c.field-meta.xml
<CustomField>
    <fullName>HasEquipmentAmendments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasEquipmentAmendments</label>
    <type>Checkbox</type>
</CustomField>