bundled_metadata/force-app/main/default/objects/Contract/fields/HasEquipmentLines__c.field-meta.xml
<CustomField>
    <fullName>HasEquipmentLines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasEquipmentLines</label>
    <type>Checkbox</type>
</CustomField>