bundled_metadata/force-app/main/default/objects/Contract/fields/HasInvestmentAmmendments__c.field-meta.xml
<CustomField>
    <fullName>HasInvestmentAmmendments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasInvestmentAmmendments</label>
    <type>Checkbox</type>
</CustomField>