bundled_metadata/force-app/main/default/objects/Contract/fields/HasInvestmentLines__c.field-meta.xml
<CustomField>
    <fullName>HasInvestmentLines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasInvestmentLines</label>
    <type>Checkbox</type>
</CustomField>