bundled_metadata/force-app/main/default/objects/Contract/fields/HasRebateAmmendments__c.field-meta.xml
<CustomField>
    <fullName>HasRebateAmmendments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasRebateAmmendments</label>
    <type>Checkbox</type>
</CustomField>