bundled_metadata/force-app/main/default/objects/Contract/fields/HasRebateLines__c.field-meta.xml
<CustomField>
    <fullName>HasRebateLines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasRebateLines</label>
    <type>Checkbox</type>
</CustomField>