bundled_metadata/force-app/main/default/objects/Contract/fields/Invoices_Sent__c.field-meta.xml
<CustomField>
    <fullName>Invoices_Sent__c</fullName>
    <label>No. of Invoices Sent</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>