bundled_metadata/force-app/main/default/objects/Contract/fields/Number_of_Invoices_Signed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Invoices_Signed__c</fullName>
    <description>Tracks the total number of signed Agreement records of type Invoice associated with the Contract.</description>
    <label>Number of Invoices Signed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>