bundled_metadata/force-app/main/default/objects/Contract/fields/Settled_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Settled_Invoices__c</fullName>
    <label>Settled Invoices</label>
    <summaryFilterItems>
        <field>Contract_Settlement__c.Status__c</field>
        <operation>equals</operation>
        <value>Invoiced</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Settlement__c.Contract_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>