bundled_metadata/force-app/main/default/objects/Contract/fields/Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wholesaler</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Wholesaler</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>